tests/errors/type-error-top.ja
procedure main()
    int x
    int y
    y += top(x)
